# chess-board

./: README.md  chess-board.ipynb  pyproject.toml
.ipynb_checkpoints/: chess-board-checkpoint.ipynb
