[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["Razan Armouti <razanarmote@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.2.3"
matplotlib = "^3.4.3"
numpy = "1.21.1"
install = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
